apply new layout changes and logo

--- a/app/about.html
+++ b/app/about.html
@@ -32,24 +32,11 @@
 
     <header class="cd-main-header animate-search">
   		<div class="cd-logo"><a href="#"><img src="images/common/logo.svg" alt="Logo"></a></div>
-
   		<nav class="cd-main-nav-wrapper">
   			<a href="#search" class="cd-search-trigger"></a>
   			<ul class="cd-main-nav">
   				<li><a href="#">Companies</a></li>
-  				<li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Project List#1</a>
-              <a class="dropdown-item" href="#">Project List#2</a>
-              <a class="dropdown-item" href="#">Project List#3</a>
-              <a class="dropdown-item" href="#">Project List#4</a>
-              <a class="dropdown-item" href="#">Project List#5</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Project List#4</a>
-              <a class="dropdown-item" href="#">Project List#5</a>
-            </div>
-          </li>
+  				<li><a href="#" >Projects</a></li>
           <li>
             <a href=""><span class="flag-icon flag-icon-ae"></span> Dubai</a>
           </li>
