--- a/app/home.html
+++ b/app/home.html
@@ -32,24 +32,11 @@
 
     <header class="cd-main-header animate-search">
   		<div class="cd-logo"><a href="#"><img src="images/common/logo.svg" alt="Logo"></a></div>
-
   		<nav class="cd-main-nav-wrapper">
   			<a href="#search" class="cd-search-trigger"></a>
   			<ul class="cd-main-nav">
   				<li><a href="#">Companies</a></li>
-  				<li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Project List#1</a>
-              <a class="dropdown-item" href="#">Project List#2</a>
-              <a class="dropdown-item" href="#">Project List#3</a>
-              <a class="dropdown-item" href="#">Project List#4</a>
-              <a class="dropdown-item" href="#">Project List#5</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Project List#4</a>
-              <a class="dropdown-item" href="#">Project List#5</a>
-            </div>
-          </li>
+  				<li><a href="#" >Projects</a></li>
           <li>
             <a href=""><span class="flag-icon flag-icon-ae"></span> Dubai</a>
           </li>
@@ -69,9 +56,9 @@
             <h1 class="text-center">Matchmaking for Small Businesses</h1>
             <p class="text-center">Find work and source suppliers in your local marketplace...</p>
             <div class="btn-hero text-center">
-              <a href="#" data-toggle="modal" data-target="#add-company"  class="btn btn-blue">Add your company</a>
+              <a href="#" data-toggle="modal" data-target="#add-company"  class="btn btn-blue"><i class="fa fa-clone" aria-hidden="true"></i> Add your company</a>
               <span class=""> or </span>
-              <a href="#" class="btn btn-blue ">publish your project</a>
+              <a href="#" class="btn btn-blue "><i class="fa fa-folder-open-o" aria-hidden="true"></i> publish your project</a>
             </div>
           </div>
         </div>
@@ -96,18 +83,18 @@
 
       <section class="featured-companies bg-gray">
         <div class="container-fluid">
-          <div class="row">
+          <div class="row px-4">
             <div class="col-md-4">
               <div class="sidebar sidebar-01">
                 <h2>Find Suppliers</h2>
                 <p class="mt-5 mb-5"> Browse thousands of reliable suppliers in different industries. Contact suppliers through SMBeez or directly. Check out the suppliers’ reviews by other clients like you and engage confidently in business relationships based on mutual trust.</p>
-                <a href="" class="btn btn-blue btn-yellow">Browse Companies</a>
+                <a href="" class="btn btn-blue btn-yellow"><i class="fa fa-angle-right" aria-hidden="true"></i> Browse Companies</a>
               </div>
             </div>
             <div class="col-md-8">
               <div class="row">
                 <div class="col-md-12">
-                  <h3 class="mb-5">Featured companies <a href="" class="btn btn-trans pull-right">Discover more</a></h3>
+                  <h3 class="mb-5">Featured companies <a href="" class="btn btn-trans pull-right"><i class="fa fa-arrow-right" aria-hidden="true"></i> Discover more</a></h3>
                 </div>
                 <div class="col-md-6">
                   <div class="company-box box-block mb-5">
@@ -175,11 +162,11 @@
 
       <section class="featured-projects box-block">
         <div class="container-fluid">
-          <div class="row">
+          <div class="row  px-4">
             <div class="col-md-8">
               <div class="row equal">
                 <div class="col-md-12">
-                  <h3 class="mb-5">Featured Projects <a href="" class="btn btn-trans pull-right">Discover more</a></h3>
+                  <h3 class="mb-5">Featured Projects <a href="" class="btn btn-trans pull-right"><i class="fa fa-arrow-right" aria-hidden="true"></i> Discover more</a></h3>
                 </div>
                 <div class="col-md-6 mb-4">
                   <div class="project-box box-block">
@@ -240,13 +227,15 @@
       </section>
 
 
-      <section class="create-intro-sidebar mb-5">
+      <section class="create-intro-sidebar py-5 bg-gray">
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-6 col-xs-12 offset-md-3 text-center">
-              <h2>Find Work</h2>
+              <div class="text-center"></div>
+              <h2>
+                <i class="fa fa-folder-o fa-3x mb-3" aria-hidden="true"></i> <br />Find Work</h2>
               <p class="mt-5 mb-5"> Browse thousands of reliable suppliers in different industries. Contact suppliers through SMBeez or directly. Check out the suppliers’ reviews by other clients like you and engage confidently in business relationships based on mutual trust.</p>
-              <a href="" class="btn btn-blue btn-yellow">Browse Projects</a>
+              <a href="" class="btn btn-blue btn-yellow"><i class="fa fa-angle-right" aria-hidden="true"></i>  Browse Projects</a>
             </div>
           </div>
         </div>
@@ -257,7 +246,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-6 col-xs-12 offset-md-3 text-center">
-              <h2>Be Found</h2>
+              <h2><i class="fa fa-files-o fa-2x mb-3" aria-hidden="true"></i> <br /> Be Found</h2>
               <p class="mt-5 mb-5">Create your company profile and sar thousands of reliable suppliers in different industries. Contact suppliers through SMBeez or directly. Check out the suppliers’ reviews by other clients like you and engage confidently in business relationships based on mutual trust.</p>
               <a href="" class="btn btn-blue btn-yellow-2 ">Browse Projects</a>
             </div>
@@ -378,7 +367,7 @@
 
     <footer class="footer">
       <div class="container-fluid">
-        <div class="row">
+        <div class="row px-4">
           <div class="col-md-9">
             <h6 class="mb-3">What is SMBeez</h6>
             <p>SMBeez is your local online marketplace for small and medium companies keen to do business with you. Source project opportunities and find reliable suppliers easily from the comfort of your office. Confidently do business with trusted... <a href="">more</a></p>
