--- a/app/dashboard-compnay.html
+++ b/app/dashboard-compnay.html
@@ -38,8 +38,8 @@
         <ul class="cd-main-nav">
           <li><a href="#">Companies</a></li>
           <li><a href="#">Projects</a></li>
-          <li class="flags-dropdown">
-            <a class="nav-link" href="#"><span class="flag-icon flag-icon-ae"></span> Dubai</a>
+          <li class="no-effect">
+            <a href="#"><span class="flag-icon flag-icon-ae"></span> Dubai</a>
           </li>
           <li class="nav-item dropdown usernav">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="images/media/user.jpg" alt="UserName"></a>
