--- a/app/dashboard-messages.html
+++ b/app/dashboard-messages.html
@@ -38,8 +38,8 @@
         <ul class="cd-main-nav">
           <li><a href="#">Companies</a></li>
           <li><a href="#">Projects</a></li>
-          <li class="flags-dropdown">
-            <a class="nav-link" href="#"><span class="flag-icon flag-icon-ae"></span> Dubai</a>
+          <li class="no-effect">
+            <a href="#"><span class="flag-icon flag-icon-ae"></span> Dubai</a>
           </li>
           <li class="nav-item dropdown usernav">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="images/media/user.jpg" alt="UserName"></a>
@@ -54,7 +54,7 @@
       <a href="#" class="cd-nav-trigger cd-text-replace">Menu<span></span></a>
     </header>
 
-    
+
     <nav class="dashboard-nav navbar navbar-expand-lg">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent2" aria-controls="navbarSupportedContent2" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fa fa-bars" aria-hidden="true"></i>
