--- a/app/home.html
+++ b/app/home.html
@@ -37,11 +37,10 @@
   			<ul class="cd-main-nav">
   				<li><a href="#">Companies</a></li>
   				<li><a href="#" >Projects</a></li>
-          <li>
+          <li class="no-effect">
             <a href=""><span class="flag-icon flag-icon-ae"></span> Dubai</a>
           </li>
-
-  				<li><a href="#">Sign in</a></li>
+  				<li class="btn-menu"><a href="#">Sign in</a></li>
   			</ul> <!-- .cd-main-nav -->
   		</nav> <!-- .cd-main-nav-wrapper -->
   		<a href="#" class="cd-nav-trigger cd-text-replace">Menu<span></span></a>
