--- a/app/company-details.html
+++ b/app/company-details.html
@@ -808,22 +808,62 @@
                                   <div class="form-group">
                                     <label for="recipient-name" class="col-form-label">Question</label>
                                   </div>
-                                  <div class="form-group form-bg">
-                                    <label class="custom-control custom-radio">
-                                      <input id="radio11" name="radio1" type="radio" class="custom-control-input">
-                                      <span class="custom-control-indicator"></span>
-                                      <span class="custom-control-description">Yes</span>
-                                    </label>
-                                    <label class="custom-control custom-radio">
-                                    <input id="radio21" name="radio1" type="radio" class="custom-control-input">
-                                      <span class="custom-control-indicator"></span>
-                                      <span class="custom-control-description">No</span>
-                                    </label>
+
+                                  <div class="radio-cases">
+                                    <div class="form-group form-bg">
+                                      <label class="custom-control custom-radio radio-yes-case">
+                                        <input id="radio11" name="radio1" type="radio" class="custom-control-input">
+                                        <span class="custom-control-indicator"></span>
+                                        <span class="custom-control-description">Yes</span>
+                                      </label>
+                                      <label class="custom-control custom-radio radio-no-case">
+                                      <input id="radio21" name="radio1" type="radio" class="custom-control-input">
+                                        <span class="custom-control-indicator"></span>
+                                        <span class="custom-control-description">No</span>
+                                      </label>
+                                    </div>
+                                    <div class="form-group yes-case-info">
+                                      <label for="message-text" class="col-form-label">Show When Yes</label>
+                                      <input type="text" class="form-control">
+                                    </div>
+
+                                    <div class="form-group no-case-info">
+                                    <label for="message-text" class="col-form-label">Show When No</label>
+                                    <input type="text" class="form-control">
                                   </div>
+                                  </div>
+
                                   <div class="form-group">
                                     <label for="message-text" class="col-form-label">Message:</label>
                                     <textarea class="form-control" id="message-text" placeholder="Write your text here..."></textarea>
                                   </div>
+
+
+                                <br />
+                                  <div class="radio-cases">
+                                    <div class="form-group form-bg">
+                                      <label class="custom-control custom-radio radio-yes-case">
+                                        <input id="radio1133" name="radio133" type="radio" class="custom-control-input">
+                                        <span class="custom-control-indicator"></span>
+                                        <span class="custom-control-description">Yes</span>
+                                      </label>
+                                      <label class="custom-control custom-radio radio-no-case">
+                                      <input id="radio2133" name="radio133" type="radio" class="custom-control-input">
+                                        <span class="custom-control-indicator"></span>
+                                        <span class="custom-control-description">No</span>
+                                      </label>
+                                    </div>
+                                    <div class="form-group yes-case-info">
+                                      <label for="message-text" class="col-form-label">Show When Yes</label>
+                                      <input type="text" class="form-control">
+                                    </div>
+
+                                    <div class="form-group no-case-info">
+                                    <label for="message-text" class="col-form-label">Show When No</label>
+                                    <input type="text" class="form-control">
+                                  </div>
+                                  </div>
+
                                 </div>
 
 
