add new pages for claim

--- a/app/index.html
+++ b/app/index.html
@@ -81,7 +81,7 @@
             <ul class="list-group">
               <li class="list-group-item"><a href="claim-company-option-1.html">Claim Company Option 1</a></li>
               <li class="list-group-item"><a href="claim-company-option-2.html">Claim Company Option 2</a></li>
-              <li class="list-group-item"><a href="sclaim-company-thanks.html">Claim Company Thanks</a></li>
+              <li class="list-group-item"><a href="claim-company-thanks.html">Claim Company Thanks</a></li>
             </ul>
           </div>
         </div>
