build new pages

--- a/app/company-details.html
+++ b/app/company-details.html
@@ -205,7 +205,7 @@
                         <ul class="review-content-social">
                           <li><a href=""><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></a></li>
                           <li><a href=""><i class="fa fa-thumbs-o-down" aria-hidden="true"></i></a></li>
-                          <li><a href="" class="btn btn-blue btn-yellow"><i class="fa fa-flag-o" aria-hidden="true"></i> Flag</a></li>
+                          <li><a href="#" class="btn btn-blue btn-yellow"><i class="fa fa-flag-o" aria-hidden="true"></i> Flag</a></li>
                           <li><a href=""><i class="fa fa-ellipsis-h" aria-hidden="true"></i></a></li>
                         </ul>
                       </div>
