--- a/app/index.html
+++ b/app/index.html
@@ -50,8 +50,8 @@
               <li class="list-group-item"><a href="search-result-projects.html">Search Result Project</a></li>
               <li class="list-group-item"><a href="search-result-company.html">Search Result Company</a></li>
               <li class="list-group-item"><a href="all-projects-industries.html">All Projects Industries</a></li>
-              <li class="list-group-item"><a href="search-page.html">Search Page (new)</a></li>
-              <li class="list-group-item"><a href="about.html">About us (new)</a></li>
+              <li class="list-group-item"><a href="search-page.html">Search Page</a></li>
+              <li class="list-group-item"><a href="about.html">About us</a></li>
 
             </ul>
           </div>
@@ -74,8 +74,33 @@
               <li class="list-group-item"><a href="settings-basic-info.html">Settings Basic Info</a></li>
               <li class="list-group-item"><a href="settings-email-notifications.html">Settings Email Notifications</a></li>
               <li class="list-group-item"><a href="settings-location-applied.html">Settings Location</a></li>
+              <li class="list-group-item"><a href="settings-achievements.html">Settings Achievements</a></li>
+              <li class="list-group-item"><a href="settings-congrats.html">Settings Congrats</a></li>
+              <li class="list-group-item"><a href="settings-redeem.html">Settings Redeem</a></li>
+              <li class="list-group-item"><a href="settings-invite-people.html">Settings Invite People</a></li>
+              <li class="list-group-item"><a href="settings-import-google-contacts.html">Settings Import Google contacts</a></li>
+              <li class="list-group-item"><a href="settings-myreviews.html">Settings my Reviews</a></li>
+              <li class="list-group-item"><a href="settings-review-from-customers.html">Settings review from customers</a></li>
+              <li class="list-group-item"><a href="settings-review-from-suppliers.html">Settings review from suppliers</a></li>
+
             </ul>
           </div>
+
+          <div class="col-md-6 pb-5">
+            <h1 class="mt-4 mb-4">SuperAdmin</h1>
+            <ul class="list-group">
+              <li class="list-group-item"><a href="sd-companies.html">SuperAdmin Companies</a></li>
+              <li class="list-group-item"><a href="sd-dashboard.html">SuperAdmin Dashboard</a></li>
+              <li class="list-group-item"><a href="sd-indusrties.html">SuperAdmin Indusrties</a></li>
+              <li class="list-group-item"><a href="sd-projects.html">SuperAdmin Projects</a></li>
+              <li class="list-group-item"><a href="sd-reviews.html">SuperAdmin Reviews</a></li>
+              <li class="list-group-item"><a href="sd-specialities.html">SuperAdmin Specialities</a></li>
+              <li class="list-group-item"><a href="sd-user.html">SuperAdmin User</a></li>
+              <li class="list-group-item"><a href="sd-tickets.html">SuperAdmin Tickets</a></li>
+              <li class="list-group-item"><a href="sd-popup.html">SuperAdmin Popups</a></li>
+            </ul>
+          </div>
+
           <div class="col-md-6 pb-5">
             <h1 class="mt-4 mb-4">Claim Company </h1>
             <ul class="list-group">
@@ -87,6 +112,10 @@
         </div>
       </div>
     </main>
+
+
+
+
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
