--- a/app/home.html
+++ b/app/home.html
@@ -99,8 +99,8 @@
                   <div class="company-box box-block mb-5">
                     <img class="img-responsive" src="images/media/media-01.jpg" alt="tile here">
                     <div class="company-box-header media mt-4">
-                      <a href="#" class="mr-3">
-                        <i class="fa fa-circle fa-4x" aria-hidden="true"></i>
+                      <a href="#" class="mr-3 thumb-int">
+                        GA
                       </a>
                       <div class="media-body">
                       <p class="thumb-title mt-1 mb-1">A Good Autoresponder</p>
