build Company page Edit

--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
               <li class="list-group-item"><a href="dashboard-messages.html">Dashboard Messages</a></li>
               <li class="list-group-item"><a href="dashboard-bookmarks.html">Dashboard bookmarks</a></li>
               <li class="list-group-item"><a href="complete-profile.html">Complete Profile</a></li>
-
+              <li class="list-group-item"><a href="dashboard-compnay-edit.html">Dashboard Company Edit (new)</a></li>
             </ul>
           </div>
           <div class="col-md-6 pb-5">
