add active for main-menu and sub-menu

--- a/app/home.html
+++ b/app/home.html
@@ -35,7 +35,7 @@
   		<nav class="cd-main-nav-wrapper">
   			<a href="#search" class="cd-search-trigger"></a>
   			<ul class="cd-main-nav">
-  				<li><a href="#">Companies</a></li>
+  				<li><a href="#" class="active">Companies</a></li>
   				<li><a href="#" >Projects</a></li>
           <li class="no-effect">
             <a href=""><span class="flag-icon flag-icon-ae"></span> Dubai</a>
