--- a/app/dashboard-compnay-edit.html
+++ b/app/dashboard-compnay-edit.html
@@ -61,7 +61,7 @@
       </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent2">
       <ul class="nav navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="">Published projects</a></li>
+        <li class="nav-item"><a class="nav-link active" href="">Published projects</a></li>
         <li class="nav-item"><a class="nav-link" href="">Projects applied</a></li>
         <li class="nav-item"><a class="nav-link" href="">My company</a></li>
         <li class="nav-item"><a class="nav-link" href="">bookmarks</a></li>
