new small updates

--- a/app/company-listing.html
+++ b/app/company-listing.html
@@ -83,7 +83,7 @@
                       <div class="form-group">
                         <input type="text" class="form-control" placeholder="Search within companies">
                       </div>
-                <div class="form-group">
+                    <div class="form-group">
                       <label class="custom-control custom-checkbox">
                         <input type="checkbox" class="custom-control-input" required>
                         <span class="custom-control-indicator"></span>
@@ -126,9 +126,18 @@
                       </label>
                     </div>
                     </div>
+
+
+
+                    <div class="search-filter">
+                        <h3>industry specialities <i class="fa fa-filter pull-right" aria-hidden="true"></i></h3>
+                        <p>Electrical Supplies</p>
+                        <p>Electrical Supplies</p>
+                        <p>Electrical Supplies</p>
+                        <p>Electrical Supplies</p>
+                    </div>
                   </div>
                 </form>
-
               </div>
             </div>
             <div class="col-md-8">
