--- a/app/complete-profile.html
+++ b/app/complete-profile.html
@@ -117,9 +117,11 @@
               <div class="dashboard-company-block">
                   <div class="d-flex justify-content-between">
                     <div>
-                      <a  href="" class="edit-thumb">
-                        <i class="fa fa-pencil-square-o align-self-center " aria-hidden="true"></i>
-                      </a>
+                      <div class="edit-thumb-upload">
+                        <img src="images/media/user.jpg" alt="UserName">
+                        <span class="edit-thumb-icon"><i class="fa fa-pencil-square-o align-self-center " aria-hidden="true"></i></span>
+                        <input type="file" name="file"/>
+                      </div>
                     </div>
                     <div class="media-body px-3">
                       <h5 class="mt-1">Loay Youssef</h5>
