--- a/app/company-details.html
+++ b/app/company-details.html
@@ -104,7 +104,7 @@
           <div class="col-lg-8">
 
             <div class="hero-company-details">
-              <h1>Cloud Concept Group Cairo</h1>
+              <h1 class="w-50">Cloud Concept Group Cairo Cloud Concept Group Cairo</h1>
               <h2>Salesforce Platinum Partner</h2>
               <div class="star-rating">
                 <ul class="list-inline">
