--- a/app/company-listing.html
+++ b/app/company-listing.html
@@ -71,6 +71,12 @@
               <div class="filter">
                 <form action="" class="form-group row">
                   <div class="col-md-12">
+
+                    <div class="search-filter mb-4">
+                        <span>Electrical Supplies</span>
+                    </div>
+
+
                     <select class="custom-select mb-2 mr-sm-2 mb-sm-0 w-100">
                       <option selected>All Industries</option>
                       <option value="1">One</option>
@@ -125,16 +131,6 @@
                         <span class="custom-control-description">Tutoring</span>
                       </label>
                     </div>
-                    </div>
-
-
-
-                    <div class="search-filter">
-                        <h3>industry specialities <i class="fa fa-filter pull-right" aria-hidden="true"></i></h3>
-                        <p>Electrical Supplies</p>
-                        <p>Electrical Supplies</p>
-                        <p>Electrical Supplies</p>
-                        <p>Electrical Supplies</p>
                     </div>
                   </div>
                 </form>
