star rating and date input

--- a/app/home.html
+++ b/app/home.html
@@ -108,6 +108,7 @@
                         <ul class="list-inline">
                           <li class="list-inline-item">
                             <select class="star-rating-ro">
+                              <option value="0">0</option>
                               <option value="1">1</option>
                               <option value="2">2</option>
                               <option value="3">3</option>
@@ -137,6 +138,7 @@
                         <ul class="list-inline">
                           <li class="list-inline-item">
                             <select class="star-rating-fn">
+                              <option value="0">0</option>
                               <option value="1">1</option>
                               <option value="2">2</option>
                               <option value="3">3</option>
