--- a/app/settings-basic-info.html
+++ b/app/settings-basic-info.html
@@ -107,6 +107,18 @@
               <div class="row">
                 <div class="col-md-7">
                 <form action="" class="user-setting">
+
+                  
+
+
+                  <div class="form-group">
+                    <label for="">Date </label>
+                    <div class="d-flex">
+                      <input type="date" class="form-control" data-date="" data-date-format="DD MMMM YYYY"  value="2015-08-09">
+                      <a href="" class="edit-form"><i class="fa fa-2x fa-pencil-square-o" aria-hidden="true"></i></a>
+                    </div>
+                  </div>
+
                   <div class="form-group">
                     <label for="">Linkedin Profile</label>
                     <div class="d-flex">
