--- a/app/settings-basic-info.html
+++ b/app/settings-basic-info.html
@@ -12,6 +12,7 @@
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="/bower_components/animate.css/animate.css" />
+    <link rel="stylesheet" href="/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker3.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -107,14 +108,10 @@
               <div class="row">
                 <div class="col-md-7">
                 <form action="" class="user-setting">
-
-                  
-
-
                   <div class="form-group">
                     <label for="">Date </label>
                     <div class="d-flex">
-                      <input type="date" class="form-control" data-date="" data-date-format="DD MMMM YYYY"  value="2015-08-09">
+                      <input data-provide="datepicker" class="form-control" placeholder="dd/mm/yyyy">
                       <a href="" class="edit-form"><i class="fa fa-2x fa-pencil-square-o" aria-hidden="true"></i></a>
                     </div>
                   </div>
@@ -238,6 +235,7 @@
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <script src="/bower_components/scrollreveal/dist/scrollreveal.js"></script>
     <script src="/bower_components/jquery-bar-rating/jquery.barrating.js"></script>
+    <script src="/bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
