add error 404 page

--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,8 @@
               <li class="list-group-item"><a href="all-projects-industries.html">All Projects Industries</a></li>
               <li class="list-group-item"><a href="search-page.html">Search Page</a></li>
               <li class="list-group-item"><a href="about.html">About us</a></li>
+              <li class="list-group-item"><a href="error-404.html">Error 404</a></li>
+
 
             </ul>
           </div>
