media reply for review

--- a/app/company-details.html
+++ b/app/company-details.html
@@ -196,19 +196,39 @@
                 <div class="review-block">
                   <div class="review-content">
                     <div class="media br-btm  mb-4 d-flex row equal">
-                      <div class="col-md-2">
-                        <img class="img-fluid img-full mb-3" src="../images/media/placeholder.png" alt="Generic placeholder image">
-                      </div>
-                      <div class="col-lg-7 col-md-10 mb-4">
-                        <h5 class="mt-0">Samy Gerges</h5>
-                        <p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have allowed humanity to create slimmer, more portable technology than we’ve ever had access to before. From your wrist watch to your laptop,
-                          a lot of the on the go electronics that we tote from place to place are only possible because of their thin, light LCD display screens... <a href="">more <i class="fa fa-caret-down" aria-hidden="true"></i></a></p>
-                        <ul class="review-content-social">
-                          <li><a href=""><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></a></li>
-                          <li><a href=""><i class="fa fa-thumbs-o-down" aria-hidden="true"></i></a></li>
-                          <li><a href="#" class="btn btn-blue btn-yellow"><i class="fa fa-flag-o" aria-hidden="true"></i> Flag</a></li>
-                          <li><a href=""><i class="fa fa-ellipsis-h" aria-hidden="true"></i></a></li>
-                        </ul>
+                      <div class="col-lg-9 col-md-10 mb-4">
+                        <div class="media ">
+                          <img class="img-fluid mr-3" src="../images/media/placeholder.png"  width="100" alt="Generic placeholder image">
+                          <div class="media-body">
+                            <h5 class="mt-0">Samy Gerges</h5>
+                            <p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have allowed humanity to create slimmer, more portable technology than we’ve ever had access to before. From your wrist watch to your laptop,
+                              a lot of the on the go electronics that we tote from place to place are only possible because of their thin, light LCD display screens... <a href="">more <i class="fa fa-caret-down" aria-hidden="true"></i></a></p>
+                            <ul class="review-content-social">
+                              <li><a href=""><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></a></li>
+                              <li><a href=""><i class="fa fa-thumbs-o-down" aria-hidden="true"></i></a></li>
+                              <li><a href="#" class="btn btn-blue btn-yellow"><i class="fa fa-flag-o" aria-hidden="true"></i> Flag</a></li>
+                              <li><a href=""><i class="fa fa-ellipsis-h" aria-hidden="true"></i></a></li>
+                            </ul>
+                          </div>
+                        </div>
+                        <h3 class="mt-4  mb-3">Reply</h3>
+
+                        <div class="media">
+                          <img class="img-fluid mr-3" src="../images/media/placeholder.png"  width="100" alt="Generic placeholder image">
+
+                          <div class="media-body">
+
+                            <h5 class="mt-0">Samy Gerges</h5>
+                            <p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have allowed humanity to create slimmer, more portable technology than we’ve ever had access to before. From your wrist watch to your laptop,
+                              a lot of the on the go electronics that we tote from place to place are only possible because of their thin, light LCD display screens... <a href="">more <i class="fa fa-caret-down" aria-hidden="true"></i></a></p>
+                            <ul class="review-content-social">
+                              <li><a href=""><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></a></li>
+                              <li><a href=""><i class="fa fa-thumbs-o-down" aria-hidden="true"></i></a></li>
+                              <li><a href="#" class="btn btn-blue btn-yellow"><i class="fa fa-flag-o" aria-hidden="true"></i> Flag</a></li>
+                              <li><a href=""><i class="fa fa-ellipsis-h" aria-hidden="true"></i></a></li>
+                            </ul>
+                          </div>
+                        </div>
                       </div>
                       <div class="col-lg-3 col-md-12">
                         <div class="rating-sidebar">
@@ -285,20 +305,24 @@
                     </div>
 
                     <div class="media br-btm  mb-4  d-flex row equal">
-                      <div class="col-md-2">
-                        <img class="img-fluid img-full mb-3" src="../images/media/placeholder.png" alt="Generic placeholder image">
+                      <div class="col-lg-9 col-md-10 mb-4">
+                        <div class="media ">
+                          <img class="img-fluid mr-3" src="../images/media/placeholder.png"  width="100" alt="Generic placeholder image">
+                          <div class="media-body">
+                            <h5 class="mt-0">Samy Gerges</h5>
+                            <p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have allowed humanity to create slimmer, more portable technology than we’ve ever had access to before. From your wrist watch to your laptop,
+                              a lot of the on the go electronics that we tote from place to place are only possible because of their thin, light LCD display screens... <a href="">more <i class="fa fa-caret-down" aria-hidden="true"></i></a></p>
+                            <ul class="review-content-social">
+                              <li><a href=""><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></a></li>
+                              <li><a href=""><i class="fa fa-thumbs-o-down" aria-hidden="true"></i></a></li>
+                              <li><a href="#" class="btn btn-blue btn-yellow"><i class="fa fa-flag-o" aria-hidden="true"></i> Flag</a></li>
+                              <li><a href=""><i class="fa fa-ellipsis-h" aria-hidden="true"></i></a></li>
+                            </ul>
+                          </div>
+                        </div>
                       </div>
-                      <div class="col-lg-7 col-md-10 mb-4">
-                        <h5 class="mt-0">Samy Gerges</h5>
-                        <p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have allowed humanity to create slimmer, more portable technology than we’ve ever had access to before. From your wrist watch to your laptop,
-                          a lot of the on the go electronics that we tote from place to place are only possible because of their thin, light LCD display screens... <a href="">more <i class="fa fa-caret-down" aria-hidden="true"></i></a></p>
-                        <ul class="review-content-social">
-                          <li><a href=""><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></a></li>
-                          <li><a href=""><i class="fa fa-thumbs-o-down" aria-hidden="true"></i></a></li>
-                          <li><a href="" class="btn btn-blue btn-yellow"><i class="fa fa-flag-o" aria-hidden="true"></i> Flag</a></li>
-                          <li><a href=""><i class="fa fa-ellipsis-h" aria-hidden="true"></i></a></li>
-                        </ul>
-                      </div>
+
+
                       <div class="col-lg-3 col-md-12">
                         <div class="rating-sidebar">
                           <div class="rating-sidebar-block">
@@ -375,19 +399,21 @@
 
 
                     <div class="media d-flex row equal">
-                      <div class="col-md-2">
-                        <img class="img-fluid img-full mb-3" src="../images/media/placeholder.png" alt="Generic placeholder image">
-                      </div>
-                      <div class="col-lg-7 col-md-10 mb-4">
-                        <h5 class="mt-0">Samy Gerges</h5>
-                        <p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have allowed humanity to create slimmer, more portable technology than we’ve ever had access to before. From your wrist watch to your laptop,
-                          a lot of the on the go electronics that we tote from place to place are only possible because of their thin, light LCD display screens... <a href="">more <i class="fa fa-caret-down" aria-hidden="true"></i></a></p>
-                        <ul class="review-content-social">
-                          <li><a href=""><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></a></li>
-                          <li><a href=""><i class="fa fa-thumbs-o-down" aria-hidden="true"></i></a></li>
-                          <li><a href="" class="btn btn-blue btn-yellow"><i class="fa fa-flag-o" aria-hidden="true"></i> Flag</a></li>
-                          <li><a href=""><i class="fa fa-ellipsis-h" aria-hidden="true"></i></a></li>
-                        </ul>
+                      <div class="col-lg-9 col-md-10 mb-4">
+                        <div class="media ">
+                          <img class="img-fluid mr-3" src="../images/media/placeholder.png"  width="100" alt="Generic placeholder image">
+                          <div class="media-body">
+                            <h5 class="mt-0">Samy Gerges</h5>
+                            <p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have allowed humanity to create slimmer, more portable technology than we’ve ever had access to before. From your wrist watch to your laptop,
+                              a lot of the on the go electronics that we tote from place to place are only possible because of their thin, light LCD display screens... <a href="">more <i class="fa fa-caret-down" aria-hidden="true"></i></a></p>
+                            <ul class="review-content-social">
+                              <li><a href=""><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></a></li>
+                              <li><a href=""><i class="fa fa-thumbs-o-down" aria-hidden="true"></i></a></li>
+                              <li><a href="#" class="btn btn-blue btn-yellow"><i class="fa fa-flag-o" aria-hidden="true"></i> Flag</a></li>
+                              <li><a href=""><i class="fa fa-ellipsis-h" aria-hidden="true"></i></a></li>
+                            </ul>
+                          </div>
+                        </div>
                       </div>
                       <div class="col-lg-3 col-md-12">
                         <div class="rating-sidebar">
