add reply media style

--- a/app/company-details.html
+++ b/app/company-details.html
@@ -211,13 +211,10 @@
                             </ul>
                           </div>
                         </div>
-                        <h3 class="mt-4  mb-3">Reply</h3>
+                        <h3 class="mt-4  mb-3 underline">Replies</h3>
 
                         <div class="media">
-                          <img class="img-fluid mr-3" src="../images/media/placeholder.png"  width="100" alt="Generic placeholder image">
-
-                          <div class="media-body">
-
+                          <div class="media-body push-left">
                             <h5 class="mt-0">Samy Gerges</h5>
                             <p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have allowed humanity to create slimmer, more portable technology than we’ve ever had access to before. From your wrist watch to your laptop,
                               a lot of the on the go electronics that we tote from place to place are only possible because of their thin, light LCD display screens... <a href="">more <i class="fa fa-caret-down" aria-hidden="true"></i></a></p>
@@ -307,8 +304,7 @@
                     <div class="media br-btm  mb-4  d-flex row equal">
                       <div class="col-lg-9 col-md-10 mb-4">
                         <div class="media ">
-                          <img class="img-fluid mr-3" src="../images/media/placeholder.png"  width="100" alt="Generic placeholder image">
-                          <div class="media-body">
+                          <div class="media-body push-left">
                             <h5 class="mt-0">Samy Gerges</h5>
                             <p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have allowed humanity to create slimmer, more portable technology than we’ve ever had access to before. From your wrist watch to your laptop,
                               a lot of the on the go electronics that we tote from place to place are only possible because of their thin, light LCD display screens... <a href="">more <i class="fa fa-caret-down" aria-hidden="true"></i></a></p>
@@ -401,8 +397,7 @@
                     <div class="media d-flex row equal">
                       <div class="col-lg-9 col-md-10 mb-4">
                         <div class="media ">
-                          <img class="img-fluid mr-3" src="../images/media/placeholder.png"  width="100" alt="Generic placeholder image">
-                          <div class="media-body">
+                          <div class="media-body push-left">
                             <h5 class="mt-0">Samy Gerges</h5>
                             <p>LCD screens are uniquely modern in style, and the liquid crystals that make them work have allowed humanity to create slimmer, more portable technology than we’ve ever had access to before. From your wrist watch to your laptop,
                               a lot of the on the go electronics that we tote from place to place are only possible because of their thin, light LCD display screens... <a href="">more <i class="fa fa-caret-down" aria-hidden="true"></i></a></p>
