add call center pages and notify icon

--- a/app/index.html
+++ b/app/index.html
@@ -112,6 +112,15 @@
               <li class="list-group-item"><a href="claim-company-thanks.html">Claim Company Thanks</a></li>
             </ul>
           </div>
+
+          <div class="col-md-6 pb-5">
+            <h1 class="mt-4 mb-4">Call Center </h1>
+            <ul class="list-group">
+              <li class="list-group-item"><a href="cc-home.html">Call Center [ add badge notifcation in header]</a></li>
+              <li class="list-group-item"><a href="cc-popup.html">Call Center Popup</a></li>
+            </ul>
+          </div>
+
         </div>
       </div>
     </main>
