--- a/app/home.html
+++ b/app/home.html
@@ -50,7 +50,8 @@
   	<main class="cd-main-content">
   		<!-- your content here -->
       <section class="hero">
-      <div class="container-fluid">
+        <div class="hero-bg">
+          <div class="container-fluid">
         <div class="row">
           <div class="col-xl-6 col-md-12 offset-xl-3">
             <h1 class="text-center">Matchmaking for Small Businesses</h1>
@@ -63,6 +64,7 @@
           </div>
         </div>
       </div>
+        </div>
       </section>
       <section class="hero-slider align-items-center d-none d-md-block">
         <div class="container-fluid">
