add arabic support to html pages and switch direction

--- a/app/company-details.html
+++ b/app/company-details.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="ar">
 
 <head>
   <meta charset="utf-8">
@@ -34,7 +34,7 @@
     <![endif]-->
 
   <header class="cd-main-header animate-search">
-    <div class="cd-logo"><a href="#"><img src="images/common/logo.svg" alt="Logo"></a></div>
+    <div class="cd-logo"><a href="#"><img src="images/common/logo-ar.svg" alt="Logo"></a></div>
     <nav class="cd-main-nav-wrapper">
       <a href="#search" class="cd-search-trigger"></a>
       <ul class="cd-main-nav">
