--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="ar">
   <head>
     <meta charset="utf-8">
     <meta name="description" content="">
@@ -37,7 +37,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-              <div class="cd-logo" style="position: inherit; float: none; margin: 20px auto; "><a href="#"><img src="images/common/logo.svg" alt="Logo"></a></div>
+              <div class="cd-logo" style="position: inherit; float: none; margin: 20px auto; "><a href="#"><img src="images/common/logo-ar.svg" alt="Logo"></a></div>
           </div>
           <div class="col-md-6">
             <h1 class="mt-4 mb-4">List Pages</h1>
