--- a/app/home.html
+++ b/app/home.html
@@ -39,7 +39,7 @@
   				<li><a href="#" class="active">Companies</a></li>
   				<li><a href="#" >Projects</a></li>
           <li class="no-effect">
-            <a href=""><span class="flag-icon flag-icon-ae"></span> Dubai</a>
+            <a href=""><span class="flag-icon flag-icon-eg"></span> Cairo</a>
           </li>
   				<li class="btn-menu"><a href="#">Sign in</a></li>
   			</ul> <!-- .cd-main-nav -->
