--- a/app/company-details.html
+++ b/app/company-details.html
@@ -41,7 +41,7 @@
         <li><a href="#">Companies</a></li>
         <li><a href="#">Projects</a></li>
         <li class="no-effect">
-          <a href=""><span class="flag-icon flag-icon-ae"></span> Dubai</a>
+          <a href=""><span class="flag-icon flag-icon-eg"></span> Cairo</a>
         </li>
 
         <li class="btn-menu"><a href="#">Sign in</a></li>
@@ -105,7 +105,7 @@
           <div class="col-lg-8">
 
             <div class="hero-company-details">
-              <h1 class="w-50">Cloud Concept Group Cairo Cloud Concept Group Cairo</h1>
+              <h1>Cloud Concept Group Cairo Cloud Concept Group Cairo</h1>
               <h2>Salesforce Platinum Partner</h2>
               <div class="star-rating">
                 <ul class="list-inline">
